--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,126 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Housekeeping Management</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+</head>
+<body>
+  <div class="container mt-5">
+    <h1 class="text-center mb-4">Housekeeping Management</h1>
+    
+    <!-- Add Request Form -->
+    <div class="card mb-4">
+      <div class="card-header">Add Extra Bed Request</div>
+      <div class="card-body">
+        <form id="requestForm">
+          <div class="mb-3">
+            <label for="roomNumber" class="form-label">Room Number</label>
+            <input type="text" class="form-control" id="roomNumber" required>
+          </div>
+          <div class="mb-3">
+            <label for="guestName" class="form-label">Guest Name</label>
+            <input type="text" class="form-control" id="guestName" required>
+          </div>
+          <div class="mb-3">
+            <label for="checkIn" class="form-label">Check-In Date</label>
+            <input type="date" class="form-control" id="checkIn" required>
+          </div>
+          <div class="mb-3">
+            <label for="checkOut" class="form-label">Check-Out Date</label>
+            <input type="date" class="form-control" id="checkOut" required>
+          </div>
+          <button type="submit" class="btn btn-primary">Add Request</button>
+        </form>
+      </div>
+    </div>
 
+    <!-- Requests Table -->
+    <div class="card">
+      <div class="card-header">Pending Requests</div>
+      <div class="card-body">
+        <table class="table table-bordered">
+          <thead>
+            <tr>
+              <th>Room Number</th>
+              <th>Guest Name</th>
+              <th>Check-In</th>
+              <th>Check-Out</th>
+              <th>Status</th>
+              <th>Actions</th>
+            </tr>
+          </thead>
+          <tbody id="requestsTable"></tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+
+  <!-- Scripts -->
+  <script>
+    // Mock backend: Local storage
+    const loadRequests = () => JSON.parse(localStorage.getItem('requests')) || [];
+    const saveRequests = (requests) => localStorage.setItem('requests', JSON.stringify(requests));
+
+    // Render requests
+    const renderRequests = () => {
+      const requests = loadRequests();
+      const table = document.getElementById('requestsTable');
+      table.innerHTML = '';
+
+      requests.forEach((request, index) => {
+        const row = document.createElement('tr');
+        row.innerHTML = `
+          <td>${request.roomNumber}</td>
+          <td>${request.guestName}</td>
+          <td>${request.checkIn}</td>
+          <td>${request.checkOut}</td>
+          <td>${request.status}</td>
+          <td>
+            <button class="btn btn-success btn-sm" onclick="updateStatus(${index}, 'Completed')">Complete</button>
+            <button class="btn btn-danger btn-sm" onclick="deleteRequest(${index})">Delete</button>
+          </td>
+        `;
+        table.appendChild(row);
+      });
+    };
+
+    // Add request
+    document.getElementById('requestForm').addEventListener('submit', (e) => {
+      e.preventDefault();
+      const roomNumber = document.getElementById('roomNumber').value;
+      const guestName = document.getElementById('guestName').value;
+      const checkIn = document.getElementById('checkIn').value;
+      const checkOut = document.getElementById('checkOut').value;
+
+      const requests = loadRequests();
+      requests.push({ roomNumber, guestName, checkIn, checkOut, status: 'Pending' });
+      saveRequests(requests);
+
+      renderRequests();
+      e.target.reset();
+    });
+
+    // Update status
+    const updateStatus = (index, status) => {
+      const requests = loadRequests();
+      requests[index].status = status;
+      saveRequests(requests);
+      renderRequests();
+    };
+
+    // Delete request
+    const deleteRequest = (index) => {
+      const requests = loadRequests();
+      requests.splice(index, 1);
+      saveRequests(requests);
+      renderRequests();
+    };
+
+    // Initial render
+    renderRequests();
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
